# kuafu-sysid

./: .gitignore  README.md  pyproject.toml
docs/: modeling-guide.md
examples/: example.ipynb  sysid_select.yaml  sysid_train.yaml
src/kuafu_sysid/: __init__.py  config.py  evaluate.py  features.py  fit.py  metrics.py  plots.py  store.py  train.py  validate.py
src/kuafu_sysid/models/: __init__.py  base.py  knn.py  lgbm.py  linear.py  persistence.py  xgb.py
tests/: test_api.py  test_base.py  test_build_features.py  test_config.py  test_dense_models.py  test_evaluate.py  test_features_hash.py  test_metrics.py  test_registry.py  test_smoke.py  test_store.py  test_time_features.py  test_train.py  test_tree_persistence.py
